cluster/homelab/apps/mailserver/limit-egress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: restrict-mailserver
  namespace: mailserver
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: mailu
  policyTypes:
    - Egress
  egress:
    # Allow interpod communication
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: mailserver
    # Allow MariaDB
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: database
          podSelector:
            matchLabels:
              app.kubernetes.io/name: mariadb
      ports:
        - protocol: TCP
          port: 3306
    # Allow DNS
    - to:
        - ipBlock:
            cidr: 0.0.0.0/0
      ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53
    # Allow HTTP/HTTPS to public internet
    - to:
        - ipBlock:
            cidr: 0.0.0.0/0
            except:
              - 10.0.0.0/8
              - 172.16.0.0/12
              - 192.168.0.0/16
      ports:
        - protocol: TCP
          port: 80
        - protocol: TCP
          port: 443
    # Allow outbound mail (SMTP, SMTPS, Submission)
    - to:
        - ipBlock:
            cidr: 0.0.0.0/0
      ports:
        - protocol: TCP
          port: 25 # SMTP
        - protocol: TCP
          port: 465 # SMTPS
        - protocol: TCP
          port: 587 # Submission
    # BLOCK ALL (implicit deny for all other egress traffic)
